# career-agent

./: .gitignore  README.md  config.json  pyproject.toml
career_agent/: cli.py  config.py  db.py  models.py
career_agent/scoring/: engine.py
career_agent/sources/: local_json.py  rss.py
data/: sample_jobs.json
